refactor: Changed to nightly version to access cool features.
Use_state setter is now independent of Current active fiber.

Fiber now implements FnONce and FnMut so using a fiber looks like using the function directly.

Changed FiberStore to a tree like data structure to enable future hooks depending on stuff up the tree (eg. use_context )

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 
 [dependencies]
 lazy_static = "1.5.0"
+
+[workspace]
+resolver = "2"
+members = ["examples/iced-todo" ]
+
+[features]
